--- a/documentation.html
+++ b/documentation.html
@@ -63,7 +63,8 @@
 <li style="font-size: 20px"><a href="https://d3-graph-gallery.com/graph/interactivity_tooltip.html">https://d3-graph-gallery.com/graph/interactivity_tooltip.html</a></li>
 <li style="font-size: 20px"><a href="https://www.geeksforgeeks.org/d3-js-schemetableau10-method/">https://www.geeksforgeeks.org/d3-js-schemetableau10-method/</a></li>
 <li style="font-size: 20px"><a href="https://www.youtube.com/">https://www.youtube.com/</a></li>
-
+<li style="font-size: 20px"><a href="https://www.pluralsight.com/guides/maps-made-easy-with-d3">https://www.pluralsight.com/guides/maps-made-easy-with-d3</a></li>
+<li style="font-size: 20px"><a href="https://www.d3indepth.com/geographic/">https://www.d3indepth.com/geographic/</a></li>
 
     </ul>
             </div>
