--- a/tab_documentation.html
+++ b/tab_documentation.html
@@ -80,7 +80,7 @@ While going through the data to identifying relevant column, we discovered key i
 
 In addition, the map demonstrates the distribution of alcohol consumption, with Nebraska appearing to be the highest consumer of alcohol, while Nevada has one of the lowest rates. Such insights into alcohol consumption patterns can be valuable for informing public health policies and interventions.</p>
 		<div class="container">
-			<img src="img/Class Distribution.png" width="700" alt="Image 3">
+			<img src="img/Screenshot (231).png" width="700" alt="Image 3">
 			<figcaption>Description of Image 3</figcaption>
 		</div>    
 
