--- a/tab_documentation.html
+++ b/tab_documentation.html
@@ -14,7 +14,7 @@
 		/* Style the images */
 		img {
 			max-width: 100%;
-			height: auto;
+			
 			display: block;
 			margin: auto;
 			padding: 20px 0;
@@ -102,7 +102,7 @@ While going through the data to identifying relevant column, we discovered key i
 <h2 style="color: steelblue;">Design Process</h2>
 
 <div class="container">
-			<img src="img/visu_flow.jpg" alt="Image 2">
+			<img src="img/visu_flow.jpg" height="700" alt="Image 2">
 			<figcaption></figcaption>
 		</div>
 
